fixed up some grammar

--- a/lessons.html
+++ b/lessons.html
@@ -49,20 +49,6 @@
 		</div>
 	</section>
 
-	<!-- <section id="banner"  style="background-color: white;">
-				<div class="inner" >
-					<h1 style="color: black;">Course Overview</h1>
-          <p style="color: black; padding-left: 12.5%; padding-right: 12.5%; text-align: left;">
-            Spatial reasoning skills are strongly correlated with success in computer science, especially that the introductory levels. This is because, in many instances, professors use spatial reasoning terms and ideas while teaching computer science. Thus, many students, who didn’t develop these skills at a younger age, are at a disadvantage. We have designed this course in conjunction with Professor Tychonievich to help everyone improve their skills!
-          </p>
-          <h3 style="color: black;">Requirements</h3>
-          <p style="color: black; padding-left: 12.5%; padding-right: 12.5%; text-align: left;">
-            We have no formal prerequisites, however students who have not completed CS2150 may benefit the most from this course! No computer science skills or knowledge is required to have fun and do well in this class.
-          </p>
-
-
-				</div>
-			</section> -->
 
 	<!-- One -->
 	<article id="one" class="post style1">
@@ -72,7 +58,7 @@
 					<h2><a href="lessons/lesson1.html" style="color: white;">Lesson 1: Welcome to Spatial Reasoning!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">August 29, 2018 <a href="#" style="color:#fff">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Welcome to Spatial Reasoning! Today we will go over the syllabus, and discuss the topics we will be covering as well as the structure of the class.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Welcome to Spatial Reasoning! Today we will go over the syllabus. This will include an overview of course topics and the general structure of the class.</p>
 
 			</div>
 		</div>
@@ -82,8 +68,7 @@
 					<h2><a href="lessons/lesson2.html" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, which will be used as a baseline for your progress throughout the class. We will also begin to cover the topic of sketching. This technique will allow us to communicate to others the representations
-					of the images we mentally visualize. Aside from helping build spatial skills, it is an excellent skill for any student in an engineering field to have.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, this will serve as a baseline for your progress throughout the class. We will also begin to cover sketching. Sketching, in the context of spatial reasoning, is a tool for conveingo our mental models of ideas and the world that surrounds us. Aside from helping build spatial skills, it is an excellent skill that will serve you well throughout your coursework.</p>
 
 			</div>
 		</div>
@@ -95,7 +80,8 @@
 					<h2><a href="lessons/lesson3.html" style="color: white;">Lesson 3: Sketching II</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Today we will continue learning about sketching. We will go into more detail regarding the techniques and concepts we learned last class. We will also conduct an in-class activity that will serve as reference for the first homework assignment.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will continue learning about sketching. We will go into more detail regarding the techniques and concepts we learned last class. There will also be an in-class activity. <br /> <br />
+					 HINT: this will be a good reference for the first homework assignment.</p>
 
 			</div>
 		</div>
@@ -105,7 +91,7 @@
 					<h2><a href="lessons/lesson4.html"  style="color: white;">Lesson 4: Reflections and Symmetry</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Today we will learn to reflect 3D objects across a reflection plane, and to use sketching techniques to represent the result. During the second part of the class, we will cover symmetry and how to identify one or more planes of symmetry given a 3D
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will learn to reflect 3D objects across a plane. This lesson will draw on the sketching skills learned in previous lessons. During the second part of the class, we will cover symmetry and how to identify planes of symmetry in a given 3D
 					object.
 				</p>
 
@@ -121,8 +107,7 @@
 					<h2><a href="lessons/lesson5.html" style="color: white;">Lesson 5: Rotations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Mental rotations are an important spatial skill. Today we will learn to identify the rotation that a given object has been subjected to, and then we will apply that same rotation to a different object; using the sketching techniques we learned to
-					communicate the result.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Mental rotations are an important dimension of spatial reasoning. Today we will learn how to identify and apply rotations. We will be working with various materials to grasp the concept and return to sketching in order to apply it.</p>
 
 			</div>
 		</div>
@@ -132,8 +117,8 @@
 					<h2><a href="lessons/lesson6.html" style="color: white;">Lesson 6: Cross Sections</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 3, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Visualizing and sketching cross sections of objects is an important skill to have in any engineering field, and it also helps improve our spatial reasoning skills. Today we will learn techniques that will help us visualize the cross section of a solid
-					given a certain cutting plane. We will also conduct an in-class activity where we will model objects out of playdough and cut them to verify that our visualization of the cross section was correct.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Visualizing and sketching cross sections of objects is an important skill to have in any engineering field, it also happens to help improve our spatial reasoning skills. Today we will learn techniques that will help us visualize the cross section of a solid
+					given a certain cutting plane. There will also be a fun, play-dough based in class activity.</p>
 
 			</div>
 		</div>
@@ -145,7 +130,7 @@
 					<h2><a href="lessons/lesson7.html" style="color: white;">Lesson 7: Game Day!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 10, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Believe it or not, some video games help improve spatial reasoning skills. Today, we take a break from our busy midterm schedules to explore the positive effects of some of these video games, and even play a few!</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Believe it or not, some video games help improve spatial reasoning skills. Today, we take a break from our busy midterm schedules to explore the positive effects of some of these video games, and even play a few (or a lot)! We have a feeling you are going to enjoy homework this week.</p>
 
 			</div>
 		</div>
@@ -155,7 +140,7 @@
 					<h2><a href="lessons/lesson8.html" style="color: white;">Lesson 8: Combining Solids</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 17, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">So far we have been interacting with one object in space at a time. Now, we will explore what happens when two objects interact with each other. Today we will study the intersection or combination between two solids that overlap, and, as usual, we
+				<p style="color: rgba(255, 255, 255, 0.75);">So far we have been interacting with one object in space at a time. Now, we will explore what happens when two objects interact with each other. Today we will study the shapes created by two overlapping solids, and, as usual, we
 					will sketch the results.</p>
 
 			</div>
@@ -170,8 +155,8 @@
 					<h2><a href="lessons/lesson9.html" style="color: white;">Lesson 9: Spatial Relations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 24, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">To further our study on how objects interact with each other in space, we will work on visualizing the relationship between two objects in space. We will determine if the objects overlap or not, and what their position and orientations are with respect
-					to each other and to a frame of reference.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Continuing our study on how objects interact with each other, we will work on visualizing the relationship between two objects in space. We will determine if the objects overlap or not, and what their position and orientations are with respect
+					to each other and to different frames of reference.</p>
 
 			</div>
 		</div>
