--- a/lessons.html
+++ b/lessons.html
@@ -68,7 +68,7 @@
 					<h2><a href="lessons/lesson2.html" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
-				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, this will serve as a baseline for your progress throughout the class. We will also begin to cover sketching. Sketching, in the context of spatial reasoning, is a tool for conveingo our mental models of ideas and the world that surrounds us. Aside from helping build spatial skills, it is an excellent skill that will serve you well throughout your coursework.</p>
+				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, this will serve as a baseline for your progress throughout the class. We will also begin to cover sketching. Sketching, in the context of spatial reasoning, is a tool for communicating our mental models of ideas and the world that surrounds us. Aside from helping build spatial skills, it is an excellent skill that will serve you well throughout your coursework.</p>
 
 			</div>
 		</div>
