adding link to first powerpoint slide

--- a/lessons.html
+++ b/lessons.html
@@ -55,7 +55,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson1.html" style="color: white;">Lesson 1: Welcome to Spatial Reasoning!</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1sDF_3ETWrB4RN5DPVh-uYVQT3zh-U3yD7Rum3apgceA/edit?usp=sharing" style="color: white;">Lesson 1: Welcome to Spatial Reasoning!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">August 29, 2018 <a href="#" style="color:#fff">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Welcome to Spatial Reasoning! Today we will go over the syllabus. This will include an overview of course topics and the general structure of the class.</p>
