updated lesson links to placeholder Google slides

--- a/lessons.html
+++ b/lessons.html
@@ -65,7 +65,7 @@
 		<div class="content" style="background-color: #232D4B; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson2.html" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1nq_NMO6vDXx69SGZkUgBSAsbV0-hAXGkhmYBTtp4t8I/edit?usp=sharing" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, this will serve as a baseline for your progress throughout the class. We will also begin to cover sketching. Sketching, in the context of spatial reasoning, is a tool for communicating our mental models of ideas and the world that surrounds us. Aside from helping build spatial skills, it is an excellent skill that will serve you well throughout your coursework.</p>
@@ -77,7 +77,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson3.html" style="color: white;">Lesson 3: Sketching II</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1Kqx0dFx1wvhJbf1keRJzs1I2o-OFgRi1dqQTx3CPCWM/edit?usp=sharing" style="color: white;">Lesson 3: Sketching II</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will continue learning about sketching. We will go into more detail regarding the techniques and concepts we learned last class. There will also be an in-class activity. <br /> <br />
@@ -88,7 +88,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson4.html"  style="color: white;">Lesson 4: Reflections and Symmetry</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1_kLO68MxAvveFHc7r7DoQVfCb5SmBxGHCCWIL1pGkvc/edit?usp=sharing"  style="color: white;">Lesson 4: Reflections and Symmetry</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will learn to reflect 3D objects across a plane. This lesson will draw on the sketching skills learned in previous lessons. During the second part of the class, we will cover symmetry and how to identify planes of symmetry in a given 3D
@@ -104,7 +104,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson5.html" style="color: white;">Lesson 5: Rotations</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1An2HDdBx-3PaxfkRTEfF0O4X_GKtJvJODNhJ78cC5Hw/edit?usp=sharing" style="color: white;">Lesson 5: Rotations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Mental rotations are an important dimension of spatial reasoning. Today we will learn how to identify and apply rotations. We will be working with various materials to grasp the concept and return to sketching in order to apply it.</p>
@@ -114,7 +114,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson6.html" style="color: white;">Lesson 6: Cross Sections</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/13viLAaS4BmguZdBDS14MJu2zeiq1x3lr55rZ9ILtw-Y/edit?usp=sharing" style="color: white;">Lesson 6: Cross Sections</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 3, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Visualizing and sketching cross sections of objects is an important skill to have in any engineering field, it also happens to help improve our spatial reasoning skills. Today we will learn techniques that will help us visualize the cross section of a solid
@@ -127,7 +127,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson7.html" style="color: white;">Lesson 7: Game Day!</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1aVvJTzFCcudYgQofd8PLJ9XQOUaiphVl1cuYVg5r-nU/edit?usp=sharing" style="color: white;">Lesson 7: Game Day!</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 10, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Believe it or not, some video games help improve spatial reasoning skills. Today, we take a break from our busy midterm schedules to explore the positive effects of some of these video games, and even play a few (or a lot)! We have a feeling you are going to enjoy homework this week.</p>
@@ -137,7 +137,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson8.html" style="color: white;">Lesson 8: Combining Solids</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1x-RFz8cjFX5c7-dOeSLURTEEGK0owhbDxvCi1Lftxv4/edit?usp=sharing" style="color: white;">Lesson 8: Combining Solids</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 17, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">So far we have been interacting with one object in space at a time. Now, we will explore what happens when two objects interact with each other. Today we will study the shapes created by two overlapping solids, and, as usual, we
@@ -152,7 +152,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson9.html" style="color: white;">Lesson 9: Spatial Relations</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1QEbd92uReAK0wIhx2KMAlkMwZwcNB3ayDT8TEkF4jYo/edit?usp=sharing" style="color: white;">Lesson 9: Spatial Relations</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 24, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Continuing our study on how objects interact with each other, we will work on visualizing the relationship between two objects in space. We will determine if the objects overlap or not, and what their position and orientations are with respect
@@ -163,7 +163,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson10.html" style="color: white;">Lesson 10: Spatial Orientation</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1U9_Yc1-RNG-rVqTo5N6dYMZUp2LYqfmeLAGGALrz3PA/edit?usp=sharing" style="color: white;">Lesson 10: Spatial Orientation</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 31, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will work to improve our ability to determine our own position and orientation within a given environment. This class will be devoted to an interactive activity that will help you to directly apply your skills in this area to solve a problem.</p>
@@ -175,7 +175,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson11.html" style="color: white;">Lesson 11: Review</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1tuJ76Lu7BIkKFvYgICm26grGl1m4xl4Wc80rG0CvJso/edit?usp=sharing" style="color: white;">Lesson 11: Review</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 7, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will summarize all that we have learned during the course, and discuss any topic that may need to be covered in more detail.</p>
@@ -185,7 +185,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson12.html" style="color: white;">Lesson 12: Survey of Spatial Topics I</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1L5bxlYGRD2T-4ljTc9MyiNqXzuV0AilMfo31RuKibsk/edit?usp=sharing" style="color: white;">Lesson 12: Survey of Spatial Topics I</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">We have spent all semester improving our spatial reasoning skills. Now, we will look at real-world applications of the subjects we have covered. We will also use our skills to “read” several images and diagrams directly related to engineering fields.</p>
@@ -198,7 +198,7 @@
 		<div class="content" style="background-color: #E57200; color=rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson13.html" style="color: white;">Lesson 13: Survey of Spatial Topics II</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1LidZHeKAO3pSolTaH0gHa_bMZ6GZsbRIfCIpnmP9yCg/edit?usp=sharing" style="color: white;">Lesson 13: Survey of Spatial Topics II</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">We will continue to explore the real-world applications of the topics we have covered this semester.</p>
@@ -208,7 +208,7 @@
 		<div class="content" style="background-color: #232D4B; color =rgba(255, 255, 255, 0.75);">
 			<div class="inner">
 				<header>
-					<h2><a href="lessons/lesson14.html" style="color: white;">Lesson 14: Assessment and Conclusion</a></h2>
+					<h2><a href="https://docs.google.com/presentation/d/1dBhquJl80ZnRDPamXAOiPSBkFWU_tvejp1Rvkuq4mc8/edit?usp=sharing" style="color: white;">Lesson 14: Assessment and Conclusion</a></h2>
 					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">November 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">The semester has come to an end, but before we say goodbye, you will be asked to take a final spatial skills assessment. We will also ask that you complete a course evaluation in order to improve the class in the future. Your performance on the assessment
