updated lesson assignments

--- a/lessons.html
+++ b/lessons.html
@@ -66,7 +66,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1nq_NMO6vDXx69SGZkUgBSAsbV0-hAXGkhmYBTtp4t8I/edit?usp=sharing" style="color: white;">Lesson 2: Assessment and Sketching I</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 5, 2018 <a href="staff.html" style="color:#fff;">Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will take an initial spatial skills assessment, this will serve as a baseline for your progress throughout the class. We will also begin to cover sketching. Sketching, in the context of spatial reasoning, is a tool for communicating our mental models of ideas and the world that surrounds us. Aside from helping build spatial skills, it is an excellent skill that will serve you well throughout your coursework.</p>
 
@@ -78,7 +78,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1Kqx0dFx1wvhJbf1keRJzs1I2o-OFgRi1dqQTx3CPCWM/edit?usp=sharing" style="color: white;">Lesson 3: Sketching II</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 12, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 12, 2018 <a href="staff.html" style="color:#fff;">Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will continue learning about sketching. We will go into more detail regarding the techniques and concepts we learned last class. There will also be an in-class activity. <br /> <br />
 					 HINT: this will be a good reference for the first homework assignment.</p>
@@ -89,7 +89,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1_kLO68MxAvveFHc7r7DoQVfCb5SmBxGHCCWIL1pGkvc/edit?usp=sharing"  style="color: white;">Lesson 4: Reflections and Symmetry</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 19, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 19, 2018 <a href="staff.html" style="color:#fff;">Rohit</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will learn to reflect 3D objects across a plane. This lesson will draw on the sketching skills learned in previous lessons. During the second part of the class, we will cover symmetry and how to identify planes of symmetry in a given 3D
 					object.
@@ -105,7 +105,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1An2HDdBx-3PaxfkRTEfF0O4X_GKtJvJODNhJ78cC5Hw/edit?usp=sharing" style="color: white;">Lesson 5: Rotations</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 26, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">September 26, 2018 <a href="staff.html" style="color:#fff;">Rohit</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Mental rotations are an important dimension of spatial reasoning. Today we will learn how to identify and apply rotations. We will be working with various materials to grasp the concept and return to sketching in order to apply it.</p>
 
@@ -115,7 +115,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/13viLAaS4BmguZdBDS14MJu2zeiq1x3lr55rZ9ILtw-Y/edit?usp=sharing" style="color: white;">Lesson 6: Cross Sections</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 3, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 3, 2018 <a href="staff.html" style="color:#fff;">Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Visualizing and sketching cross sections of objects is an important skill to have in any engineering field, it also happens to help improve our spatial reasoning skills. Today we will learn techniques that will help us visualize the cross section of a solid
 					given a certain cutting plane. There will also be a fun, play-dough based in class activity.</p>
@@ -138,7 +138,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1x-RFz8cjFX5c7-dOeSLURTEEGK0owhbDxvCi1Lftxv4/edit?usp=sharing" style="color: white;">Lesson 8: Combining Solids</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 17, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 17, 2018 <a href="staff.html" style="color:#fff;">Rohit</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">So far we have been interacting with one object in space at a time. Now, we will explore what happens when two objects interact with each other. Today we will study the shapes created by two overlapping solids, and, as usual, we
 					will sketch the results.</p>
@@ -153,7 +153,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1QEbd92uReAK0wIhx2KMAlkMwZwcNB3ayDT8TEkF4jYo/edit?usp=sharing" style="color: white;">Lesson 9: Spatial Relations</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 24, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 24, 2018 <a href="staff.html" style="color:#fff;">Isabel</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Continuing our study on how objects interact with each other, we will work on visualizing the relationship between two objects in space. We will determine if the objects overlap or not, and what their position and orientations are with respect
 					to each other and to different frames of reference.</p>
@@ -164,7 +164,7 @@
 			<div class="inner">
 				<header>
 					<h2><a href="https://docs.google.com/presentation/d/1U9_Yc1-RNG-rVqTo5N6dYMZUp2LYqfmeLAGGALrz3PA/edit?usp=sharing" style="color: white;">Lesson 10: Spatial Orientation</a></h2>
-					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 31, 2018 <a href="staff.html" style="color:#fff;">Rohit and Isabel</a></p>
+					<p class="info" style="border-color: rgba(255, 255, 255, 0.5); color: rgba(255, 255, 255, 0.5);">October 31, 2018 <a href="staff.html" style="color:#fff;">Rohit</a></p>
 				</header>
 				<p style="color: rgba(255, 255, 255, 0.75);">Today we will work to improve our ability to determine our own position and orientation within a given environment. This class will be devoted to an interactive activity that will help you to directly apply your skills in this area to solve a problem.</p>
 
