updating attendance policy

--- a/syllabus.html
+++ b/syllabus.html
@@ -77,7 +77,7 @@
 
 			<p>
 				<strong style="color: black;">Grading Policy </strong> <br />Participation: 50%<br />Homeworks: 25%<br />Activities: 25%<br /><br/>
-				<u>Participation:</u> Attendance will be taken every class meeting. This is a small class, so we encourage everyone’s active participation. If you need to miss a class, please contact the course instructors.<br/><br/>
+				<u>Participation:</u> Attendance will be taken every class meeting. This is a small class, so we encourage everyone’s active participation. Each unexcused absence will result in a 10% deduction from your final grade. If you need to miss a class, please contact the course instructors.<br/><br/>
 				<u>Homeworks:</u> There will be 5 homework assignments throughout the course. For each assignment, you will have no less than one week to complete your work. If you need help with any of the homeworks, or are unable to complete it on time, please
 				reach out to the course instructors.<br/><br/>
 				<u>Activities:</u> Unlike the homework assignments, these activities will be conducted during class time. You will be graded on your participation rather than on your performance. You will be notified whenever an in-class activity will count towards
