--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<div class="inner">
 			<h1>CS 1501	Spatial Reasoning</h1>
 			<ul class="actions">
-				<li><a href="lessons.html#one" class="button alt scrolly big">Most Recent Lesson</a></li>
+				<li><a href="lessons.html#two" class="button alt scrolly big">Most Recent Lesson</a></li>
 				<li><a href="./syllabus.html" class="button alt scrolly big">Syllabus</a></li>
 				<li><a href="./staff.html" class="button alt scrolly big">Teaching Staff</a></li>
 			</ul>
@@ -51,7 +51,7 @@
 
 
 	<section id="banner" style="background-color: #e57200;">
-		<div class="inner">
+		<div class="twoer">
 			<h1 style="color: white;">Welcome to Spatial Reasoning!</h1>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers
