--- a/staff.html
+++ b/staff.html
@@ -41,7 +41,7 @@
 		<div class="inner">
 			<h1>Teaching Staff</h1>
 			<ul class="actions">
-				<li><a href="lessons.html#one" class="button alt scrolly big">Most Recent Lesson</a></li>
+				<li><a href="lessons.html#two" class="button alt scrolly big">Most Recent Lesson</a></li>
 				<li><a href="syllabus.html" class="button alt scrolly big">Syllabus</a></li>
 				<li><a href="staff.html" class="button alt scrolly big">Teaching Staff</a></li>
 			</ul>
