--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
 	<section id="banner" style="background-color: #e57200;">
-		<div class="twoer">
+		<div class="inner">
 			<h1 style="color: white;">Welcome to Spatial Reasoning!</h1>
 			<p style="color: white; padding-left: 12.5%; padding-right: 12.5%; text-align: left; font-size: 18pt;">
 				Spatial reasoning skills are strongly correlated with success in engineering and computer science, especially at the introductory levels. Sometimes this is due to the spatial nature of the tasks, but more often it is because professors, texts, and peers
